# libreria

./: .gitignore  README.md  libreria.cabal  stack.yaml
src/: Main.hs
