name:                libreria
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/libreria#readme
license:             BSD3
license-file:        LICENSE
author:              Endi Sukaj
maintainer:          endisukaj@gmail.com
copyright:           2020 Endi Sukaj
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable epub-init
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       text,
                       zip,
                       bytestring,
                       containers,
                       xml-conduit,
                       hxt